compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__comparison_op_charseqs_less.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Sized charseqs\n    var c : char\n    var c_sz : char(6)\n    var s : string\n    var s_sz : string(6)\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    _v_res := c < c\n    _v_res := c < c_sz\n    _v_res := c < s\n    _v_res := c < s_sz\n\n    _v_res := c_sz < c\n    _v_res := c_sz < c_sz\n    _v_res := c_sz < s\n    _v_res := c_sz < s_sz\n\n    _v_res := s < c\n    _v_res := s < c_sz\n    _v_res := s < s\n    _v_res := s < s_sz\n\n    _v_res := s_sz < c\n    _v_res := s_sz < c_sz\n    _v_res := s_sz < s\n    _v_res := s_sz < s_sz\n    "
---
"c"@"src/main.t:30..31" [ConstVar(Var, No)]: char
"c_sz"@"src/main.t:47..51" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"s"@"src/main.t:70..71" [ConstVar(Var, No)]: string
"s_sz"@"src/main.t:89..93" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(3072), BodyId(1)))
"_v_res"@"src/main.t:149..155" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
